# Clarion

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  dev.bat  docker-compose.yml  pyproject.toml
gui/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.css  App.tsx
gui/src-tauri/: tauri.conf.json
gui/src-tauri/icons/: icon.icns
inputs/: 01_protection-eavesdrop.md  02_protection-dos.md  03_protection-rollback.md
outputs/: 01_protection-eavesdrop_doc.json  01_protection-eavesdrop_doc.md  02_protection-dos_doc.json  02_protection-dos_doc.md  03_protection-rollback_doc.json  03_protection-rollback_doc.md
src/clarion/: cli.py  pipeline.py  prompt_loader.py  prompts.py  providers.py  renderer.py  schemas.py  server.py  splitter.py  test_prompts.py
src/clarion/prompts/: generation.j2  json_enforcement.j2  repair.j2  review.j2  system_guidelines.j2
src/clarion/prompts/components/: persona_editor.j2  persona_writer.j2  rules_json.j2  rules_mermaid.j2
