[project]
name = "clarion"
version = "0.1.0"
description = "Deterministic bio-scientific documentation generator"
authors = [
    {name = "Antigravity", email = "antigravity@google.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "typer>=0.9.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=12.535.133",
]
requires-python = ">=3.11"

[project.scripts]
clarion = "clarion.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clarion"]
